[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SVInsight"
version = "0.3.4"
description = "Create social vulnerabilty index"
authors = ["Matthew Preisser <mattpreisser@gmail.com>"]
license = { file = "LICENSE.txt" }
readme = "long_desc.md"

[tool.poetry.dependencies]
python = "^3.9"
census = "*"
factor_analyzer = "*"
geopandas = "*"
numpy = "*"
pandas = "*"
PyYAML = "*"
scikit_learn = "*"
openpyxl = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"