[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "svinsight"
version = "1.1.1"
description = "Create social vulnerability index"
authors = ["Matthew Preisser <mattpreisser@gmail.com>"]
license = "MIT"
readme = "long_desc.md"

[tool.poetry.dependencies]
python = "^3.9"
census = "*"
factor_analyzer = "*"
geopandas = "*"
numpy = "*"
pandas = "*"
PyYAML = "*"
scikit_learn = "*"
openpyxl = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
# Add your development dependencies here
